<resources>

        <string name="app_name">TableLayout</string>
        <string name="table_heading">Students Basic Information</string>
        <string name="s1_name">Rohit</string>
        <string name="s1_dept">COMP</string>
        <string name="s1_city">Pune</string>
        <string name="s1_percentage">85.21</string>
        <string name="s2_name">Amit</string>
        <string name="s2_dept">E and TC</string>
        <string name="s2_city">Mumbai</string>
        <string name="s2_percentage">75.26</string>
        <string name="s3_name">Rohan</string>
        <string name="s3_dept">COMP</string>
        <string name="s3_city">Nashik</string>
        <string name="s3_percentage">90.00</string>
        <string name="s4_name">Santosh</string>
        <string name="s4_dept">COMP</string>
        <string name="s4_city">SOLAPUR</string>
        <string name="s4_percentage">79.24</string>
        <string name="s5_name">Girish</string>
        <string name="s5_dept">ENTC</string>
        <string name="s5_city">SOLAPUR</string>
        <string name="s5_percentage">84.00</string>
        <string name="s6_name">Aachal</string>
        <string name="s6_dept">MECH</string>
        <string name="s6_city">Shirpur</string>
        <string name="s6_percentage">69.84</string>
        <string name="s7_name">Riddhi</string>
        <string name="s7_dept">COMP</string>
        <string name="s7_city">Shirpur</string>
        <string name="s7_percentage">73.57</string>
        <string name="s8_name">Dinesh</string>
        <string name="s8_dept">ELEC</string>
        <string name="s8_city">Nandurbar</string>
        <string name="s8_percentage">80.50</string>
        <string name="s9_name">Kalpesh</string>
        <string name="s9_dept">CIVIL</string>
        <string name="s9_city">Jalgaon</string>
        <string name="s9_percentage">71.30</string>
        <string name="s10_name">Harish</string>
        <string name="s10_dept">COMP</string>
        <string name="s10_city">SOLAPUR</string>
        <string name="s10_percentage">72.47</string>

</resources>